# windfire-security-client

./: .gitignore  README.md  activatePythonVenv.sh  common.sh  commons.sh  createModule.sh  createPythonVenv.sh  deactivatePythonVenv.sh  installPrereqs.sh  pyproject.toml  run-auth-client.sh  setenv.sh  testAuth.py
client/: .env_PLACEHOLDER  authClient.py  run-auth-client.sh
client/config/: config_reader.py  settings.py
client/logger/: colorFormatter.py  loggerFactory.py  loggingFactory.py  logging_config_prod.json  logging_config_test.json
